# kuki

./: .clang-format  .editorconfig  .gersemirc  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.cmd  build.ps1  build.sh  install.cmd  install.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yml  (+1 more)
1-getting-started/: CMakeLists.txt
cmake/: FindDependencies.cmake
common/: camera.cpp  camera.hpp  shader.cpp  shader.hpp
editor/: CMakeLists.txt
editor/include/: camera_controller.hpp  display_traits.hpp  editor.hpp  imgui_sink.hpp
editor/source/: camera_controller.cpp  editor.cpp  editor_app.cpp  editor_gui.cpp
editor/source/gui/: assets.cpp  entity.cpp  gizmos.cpp  hierarchy.cpp  properties.cpp  resources.cpp  scene.cpp
editor/source/shader/: default_lit.frag  default_unlit.vert
editor/src/: camera_controller.cpp  delete_command.cpp  display_assets.cpp  display_components.cpp  display_entity.cpp  display_hierarchy.cpp  display_logs.cpp  display_properties.cpp  display_scene.cpp  draw_gizmos.cpp  editor.cpp  instantiate_asset.cpp  main.cpp  spawn_command.cpp
editor/src/gui/: assets.cpp  command.cpp  components.cpp  console.cpp  entity.cpp  gizmos.cpp  graph_editor.cpp  hierarchy.cpp  logs.cpp  properties.cpp  scene.cpp
editor/src/script/: camera_controller.cpp
engine/: CMakeLists.txt
engine/include/: animation.hpp  animation_system.hpp  animator.hpp  app_config.hpp  application.hpp  asset_loader.hpp  asset_manager.hpp  bone_data.hpp  bounding_box.hpp  buffer_params.hpp  camera.hpp  command.hpp  command_manager.hpp  component.hpp  component_manager.hpp  component_traits.hpp  entity_manager.hpp  event_dispatcher.hpp  event_queue.hpp  framebuffer_pool.hpp  frustum.hpp  gl_constants.hpp  glfw_constants.hpp  id.hpp  input_manager.hpp  light.hpp  material.hpp  mesh.hpp  mesh_filter.hpp  mesh_renderer.hpp  octree.hpp  physics_system.hpp  plane.hpp  pool.hpp  primitive.hpp  render_system.hpp  renderbuffer_pool.hpp  rendering_system.hpp  rendering_system.inl  scene.hpp  (+13 more)
engine/include/component/: camera.hpp  component.hpp  component_traits.hpp  light.hpp  material.hpp  mesh.hpp  mesh_filter.hpp  mesh_renderer.hpp  script.hpp  serdes.hpp  shader.hpp  skybox.hpp  texture.hpp  transform.hpp
engine/include/system/: physics.hpp  rendering.hpp  scripting.hpp  system.hpp
engine/include/utility/: framebuffer_pool.hpp  octree.hpp  pool.hpp  renderbuffer_pool.hpp  texture_pool.hpp  trie.hpp
engine/source/: application.cpp  asset_creator.cpp  asset_loader.cpp  asset_manager.cpp  entity_manager.cpp  input_manager.cpp  primitive.cpp  render_system.cpp  scene.cpp  spawn_manager.cpp  trie.cpp
engine/source/component/: camera.cpp  light.cpp  material.cpp  mesh.cpp  mesh_filter.cpp  mesh_renderer.cpp  shader.cpp  texture.cpp  transform.cpp
engine/source/shader/: pbr.frag  phong.frag  phong.vert
engine/src/: animation.cpp  animation_system.cpp  animator.cpp  application.cpp  asset_creator.cpp  asset_loader.cpp  bone_data.cpp  bounding_box.cpp  camera.cpp  command_manager.cpp  component.cpp  create_cubemap.cpp  draw_assets.cpp  draw_gizmos.cpp  draw_scene.cpp  entity_manager.cpp  framebuffer_pool.cpp  frustum.cpp  input_manager.cpp  light.cpp  material.cpp  mesh.cpp  mesh_filter.cpp  mesh_renderer.cpp  physics_system.cpp  plane.cpp  primitive.cpp  render_assets.cpp  render_scene.cpp  render_system.cpp  renderbuffer_pool.cpp  rendering_system.cpp  scene.cpp  scene_manager.cpp  shader.cpp  skybox.cpp  spawn_manager.cpp  system.cpp  texture.cpp  texture_pool.cpp  (+4 more)
engine/src/cli/: delete_command.cpp  spawn_command.cpp
engine/src/component/: camera.cpp  component.cpp  light.cpp  material.cpp  mesh.cpp  mesh_filter.cpp  mesh_renderer.cpp  script.cpp  shader.cpp  skybox.cpp  texture.cpp  transform.cpp
engine/src/shader/: blinn_phong.frag  blinn_phong.vert  bloom.frag  blur.frag  brdf.comp  brdf_lut.comp  bright.frag  bright_pass.frag  cubemap_equirect.comp  cubemap_equirect.frag  cubemap_equirect.vert  cubemap_irradiance.frag  cubemap_irradiance.vert  cubemap_prefilter.frag  equirect_cubemap.comp  equirect_cubemap.frag  irradiance.comp  lit.frag  lit.vert  lit_skinned.vert  pbr.frag  pbr.vert  phong.frag  postprocessing.frag  prefilter.comp  radiance.frag  radiance.vert  skybox.frag  skybox.vert  skybox_flat.frag  standard_m.vert  standard_mvp.vert  unlit.frag  unlit.vert  unlit2.frag  unlit2.vert
engine/src/system/: system.cpp
engine/src/system/physics/: system.cpp
engine/src/system/render/: assets.cpp  gizmos.cpp  render_system.cpp  scene.cpp
engine/src/system/rendering/: assets.cpp  gizmos.cpp  scene.cpp  system.cpp
engine/src/system/scripting/: system.cpp
engine/src/utility/: framebuffer_pool.cpp  octree.cpp  renderbuffer_pool.cpp  texture_pool.cpp  trie.cpp
game/: CMakeLists.txt
game/include/: game.hpp
game/src/: game.cpp  main.cpp
games/: CMakeLists.txt
games/include/: game.hpp
games/src/: game.cpp
getting-started/: CMakeLists.txt  fragShader.glsl  main.cpp  shader.cpp  shader.frag  shader.hpp  shader.vert  vertShader.glsl
include/: asset_loader.hpp  asset_manager.hpp  camera.hpp  camera_controller.hpp  component_manager.hpp  component_types.hpp  editor.hpp  entity_manager.hpp  gui.hpp  input_manager.hpp  primitive.hpp  render_system.hpp  shader.hpp  system.hpp  uniform_location.hpp
lighting/: CMakeLists.txt  fragShaderLight.glsl  fragShaderObject.glsl  main.cpp  vertShader.glsl
scripts/: install-requirements-linux.sh  install-requirements-windows.bat  install-tools.sh  setup-vcpkg-linux.sh  setup-vcpkg-windows.bat  setup-vcpkg.sh
source/: asset_loader.cpp  asset_manager.cpp  camera_controller.cpp  editor.cpp  entity_manager.cpp  gui.cpp  input_manager.cpp  main.cpp  primitive.cpp  render_system.cpp  shader.cpp
src/: asset_manager.cpp  camera.cpp  glad.c  gui.cpp  input_manager.cpp  main.cpp  mesh.cpp  primitive.cpp  render_system.cpp  shader.cpp  system.cpp  utility.cpp
test/: CMakeLists.txt
test/source/: main.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
(+45 files in other folders)
